fix search bars wrapping on smaller screens

--- a/nuremberg/static/style/documents.less
+++ b/nuremberg/static/style/documents.less
@@ -12,7 +12,7 @@
   }
 
   input[type="search"] {
-    width: 310px;
+    max-width: 310px;
   }
   button.clear-search {
     margin-right: 15px;
