--- a/nuremberg/static/style/landing.less
+++ b/nuremberg/static/style/landing.less
@@ -61,18 +61,17 @@ section {
   .landing-search {
     margin-top: 30px;
     margin-bottom: 15px;
-
-
     input[type=search] {
       border: 1px solid @light-gray;
       background-size: 21px;
       background-position: 5px 7px;
       padding-left: 30px;
+      width: 100%;
     }
 
     .search-button {
       .sans-serif(normal, 17px, 20px);
-      padding: 6px 13px;
+      padding: 7px 13px;
     }
 
     .include-materials {
